# modern-cpp-server-boilerplate

./: CMakeLists.txt  Jenkinsfile.groovy  README.md  build.sh  ci.sh  conanfile.txt  sonar-project.properties
01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/C-static-binary/: CMakeLists.txt
01-basic/D-shared-library/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt
01-basic/G-compile-flags/: CMakeLists.txt
01-basic/H-third-party-library/: CMakeLists.txt
01-basic/K-imported-targets/: CMakeLists.txt
cicd/: README.MD  docker-compose.yml
doc/: README-zh.md
docker/: Dockerfile
docker/jdk/: Dockerfile
docker/jenkins-agent/: Dockerfile
docker/jenkins-agent-alpine/: Dockerfile
docker/jenkins-agent-centos/: Dockerfile
docker/jenkins-agent-gcc/: Dockerfile
docker/ubuntu/: Dockerfile
features/: CMakeLists.txt
features/01-basic/: main.cpp  main_test.cpp
features/02-basic-types/: main.cpp
features/03-variable-types/: main.cpp
features/04-variable-scope/: main.cpp
features/05-const/: main.cpp
features/06-modifier-types/: main.cpp
features/07-storage-classes/: main.cpp  other.cpp
features/08-operators/: main.cpp
features/09-loops/: main.cpp
features/10-decision/: main.cpp
features/11-functions/: main.cpp
features/12-math/: main.cpp
features/13-arrays/: main.cpp
features/14-strings/: main.cpp
features/15-pointer/: main.cpp
features/16-references/: main.cpp
features/17-datetime/: main.cpp
features/18-basic-io/: main.cpp
features/19-structures/: main.cpp
features/20-class/: main.cpp
features/21-inheritance/: main.cpp
features/22-overloading/: main.cpp
features/23-polymorphism/: main.cpp
features/24-interfaces/: main.cpp
features/25-files-streams/: main.cpp
features/26-exceptions/: main.cpp
features/27-dynamic-memory/: main.cpp
features/29-namespace/: main.cpp
features/30-templates/: main.cpp
features/31-preprocessor/: main.cpp
features/32-signal/: main.cpp
features/33-threads/: main.cpp
features/34-stl/: main.cpp
include/: Logger.h  Server.h
src/: Logger.cpp  Server.cpp  main.cpp
src/lib/: Logger.cpp  Reverse.cpp  Reverse.h
test/: unit_test.cpp
